Fix horizontal scrolling bug. Caused by the hero section animations.

--- a/css/hero.css
+++ b/css/hero.css
@@ -42,6 +42,7 @@ h1 a {
 
 .hero-container {
   height: 100vh;
+  overflow: hidden;
 }
 
 .hero {
